<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KNOWtime</string>
    <string name="action_settings">Settings</string>
    <string name="back_button_contentdescription">backbutton</string>
    <string name="about">About</string>
    <string name="about_view">Hi there, HRM: Does relying on public transit get you down?\n\n
Have you been frustrated by unreliable schedule times, waiting for your bus in bad weather, or being uncertain if you’ll arrive at your destination on time?\n\n
Well, you’re not alone. There are lots of people who share your concerns, but we’ve come up with a solution to make it better.\n\n
Introducing: KNOWtime. The Smartphone app that empowers transit riders by producing user-generated and real-time bus tracking information. With KNOWtime, people can improve their commuting experience by working together.\n\n
When riders help other riders, it’s like having a friend on every bus.\n\n
Just share your location with KNOWtime while you ride and the whole community will benefit from real-time bus tracking.\n\n
KNOWtime tracks your location, not your identity. So you can feel secure riding with us.\n\n
You can also feel good about leaving your car at home, saving gas money, reducing traffic congestion, increasing parking options downtown, and contributing to a healthier environment.\n\n
KNOWtime runs on “crowd power” – the greater the crowd, the greater the power.\n\n
So connect your friends, track your ride, and help us help you by growing our *live* local network.\n\n
When you join our community, we’ll get you where you want to go in KNOWtime.\n\n</string>
    <string name="twitter_button">twitterButton</string>
    <string name="feedback_button">feedbackButton</string>
    <string name="facebook_button">facebookButton</string>
    <string name="onmy_image">onmyimage</string>
    <string name="sendingline_image">sendinglineimage</string>
    <string name="sending_image">sendingimage</string>
    <string name="onmyway_button_image">onmywaybuttonimage</string>
    <string name="connect_to_server_image">connecttoserverimage</string>
	<string name="schedual_time">Scheduled Time</string>
	<string name="routedefault">888</string>
	<string name="gotimedefault">8888</string>
	<string name="stopstabledefault">unknown</string>
	<string name="route_name">Route Name</string>
	<string name="route_stop_fav_default">Route or Stop Name</string>
	<string name="favourite_button">Favourite Button</string>
	<string name="stops_table_header">Stops Table Header</string>
	<string name="routes_table_header">Routes Table Header</string>
	<string name="hamburger_menu_button">Hamburger Menu Button</string>
	<string name="menu_about_button">About Button</string>
	<string name="menu_shareme_button">Share Me Button</string>
	<string name="menu_stops_button">Stops Button</string>
	<string name="menu_favourite_button">Favourite Button</string>
	<string name="submit_button">Submit Button</string>
	<string name="route_favourite_button">Favourite Button</string>
	<string name="menu_routes_button">Route Button</string>
	<string name="menu_privacy_policy">Privacy Policy Button</string>
	<string name="screen_header">Screen Header</string>
	<string name="menu_arrow">Menu Arrow</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="privacy_policy_text">KNOWtime Transit© End User License Agreement, Privacy Policy and Disclaimer\n\n
Your use of the KNOWtime Transit app (the “App”) is subject to Apple’s standard End User License Agreement (EULA) and this Privacy Policy and this Disclaimer and indicates your consent to them.\n\n
KNOWtime Commuter Technology Development (“KNOWtime”) respects your privacy.\n\n
While the purpose of the App is to track the location of the bus being ridden by the App user (the “User”) via the User’s GPS-enabled device’s (the “Device”) location services, no personal, personally identifying or Device data is collected or maintained.\n\n
A Device running the App will – when explicitly initiated by the User – send GPS locations in an anonymous form to KNOWtime to be used for building our real-time, crowd-sourced bus tracking service (the “Service”). The crowd-sourced location data gathered by KNOWtime doesn’t and can’t personally identify you or your Device.\n\n
KNOWtime maintains a randomly generated, numeric ID that is tied to a unique GPS signal when the User ‘s Device begins sending its location information. However, KNOWtime is only aware of the Device’s location while this tracking data is being sent, which is an action controlled by the User. Once tracking has been stopped, that ID is no longer maintained and if the same Device starts tracking again, a new randomly generated numeric ID will be created and tied to it, with no connection to the previous ID.\n\n
For diagnostic purposes, KNOWtime is collecting anonymous usage data on button presses and tracking time. These analytics also do not collect or maintain any personal, personally identifying or Device information.\n\n
Disclaimer: As the App uses User data to build our real-time, crowd-sourced bus tracking service, the accuracy of the Service and the information provided via the App can only ever be as accurate as the data provided by the Users. Therefore, the App and Service are provided “as is” without warranty of any kind, either expressed or implied, including limitation warranties of merchantability, fitness for a particular purpose, and noninfringement. KNOWtime, through the Service and App, uses reasonable efforts to provide accurate information; it does not, however, make any warranties or representations as to its accuracy or completeness. KNOWtime assumes no liability or responsibility for any errors in the information provided by the Service via the App. Your use of the Service and App is at your own risk. Under no circumstances and under no legal theory shall KNOWtime, its suppliers, or any other party involved in creating, producing, or delivering the Service and App be liable to you or any other person or persons for any indirect, direct, special, incidental, or consequential damages arising from your access to, or use of, the Service and App.\n\n
KNOWtime may from time to time change the terms of this Privacy Policy and Disclaimer, and choose to develop its own End User License Agreement (EULA). Changes will be made in-app and distributed as an update, as well as being made to this website.\n\n
You agree to be bound by any of the changes made in the terms of this Privacy Policy and Disclaimer and EULA. Continuing to use the Service and App will indicate your acceptance of the amended terms. If you do not agree with any of the amended terms, you must avoid any further use of the Services.\n\n
Last modified: 27th November 2013</string>
	<string name="location_service">LocationService</string>
    <string name="loading_stops">Loading Stops ....</string>
    <string name="stops_header_default">Stops Header</string>
	<string name="route_selector_default_number">99</string>
	<string name="route_selector_default_value"></string>
	<string name="about_screen_header">KNOWtime uses crowd-sourced GPS data to share real-time tracking information between riders on Halifax Metro Transit buses.</string>
	<string name="about_screen_shareme">Click "Share My Ride" to share your GPS info from your bus.</string>
	<string name="about_screen_trackme">Use "Track My Bus" to check the location of the next bus on your route.</string>
	<string name="about_screen_stops">Click "My Stops" to review Halifax Metro Transit\'s scheduled arrival times at each bus stop.</string>
	<string name="about_screen_favourite">Store preferred stops and routes under "My Favourites".</string>
	<string name="about_screen_title">ABOUT</string>
	<string name="about_screen_arrow">Arrow</string>
</resources>
